# PA_P2

./: .gitignore  CMakeLists.txt  README.md
SW04_verkettete_Listen/: uebung_1.c  uebung_2.c
SW05_list_stack/: list.c  stack_array_style.c  stack_linked_list_style.c
arrays/: exercise1.c  exercise2.c  exercise3a.c  exercise3b.c
doubly-linked-lists/: list.c  list.h  uebung_2.c  uebung_add.c  uebung_append.c  uebung_delete.c  uebung_insert.c
linked-lists/: uebung_1.c
pointers/: CMakeLists.txt  Uebung1a.c  Uebung1b.c  Uebung1c.c  UebungFibonacci.c  UebungPointers.c
queues/: main.c  queue_array_style.c  queue_dynamic.c  queue_dynamic.h  queue_fixed.c  queue_fixed.h
searches/: binary_search_array.c  linear_search_array.c  linear_search_linked_list.c
sorts/: bubble_sort_array.c  selection_sort_array.c
stacks/: main.c  stack_dynamic.c  stack_dynamic.h  stack_fixed.c  stack_fixed.h  stack_linked_list_style.c
trees/: binary_search_tree.c  tree.c
