cmake_minimum_required(VERSION 3.29)
project(pointers C)

set(CMAKE_C_STANDARD 11)

add_executable(pointers_1a
    pointers/Uebung1a.c)

add_executable(pointers_1b
    pointers/Uebung1b.c)

add_executable(pointers_1c
    pointers/Uebung1c.c)

add_executable(pointers_Fibonacci
    pointers/UebungFibonacci.c)

add_executable(pointers_Pointers
    pointers/UebungPointers.c)

