cmake_minimum_required(VERSION 3.29)
project(pointers C)

set(CMAKE_C_STANDARD 11)

add_executable(pointers_1a
    Uebung1a.c)

add_executable(pointers_1b
    Uebung1b.c)

add_executable(pointers_1c
    Uebung1c.c)

add_executable(pointers_Fibonacci
    UebungFibonacci.c)

add_executable(pointers_Pointers
    UebungPointers.c)

